# kde-playground-artwork

./: .git-checkout  CMakeLists.txt  INDEX  README
Oxygen/style/: CMakeLists.txt  config.h.cmake
Oxygen/style/code/: CMakeLists.txt  README - config  animation.cpp  drawcomplexcontrol.cpp  drawcontrol.cpp  drawprimitive.cpp  dynamicbrush.cpp  dynamicbrush.h  genpixmaps.cpp  gradients.cpp  inlinehelp.cpp  makros.h  oxrender.cpp  oxrender.h  oxygen.cpp  oxygen.h  oxygen.pro  oxygen.qrc  oxygen.themerc  pixelmetric.cpp  qrc_oxygen.cpp  qsubcmetrics.cpp  sizefromcontents.cpp  stdpix.cpp  stylehint.cpp  t_render1.cpp  tileset.cpp  tileset.h
Oxygen/style/config/: CMakeLists.txt  config.cpp  config.h  config.ui  qrc_config.cpp
Oxygen/style/imagebase/: round-lr.xbm  round-relief-ll.xbm  round-ur.xbm
Oxygen/style/toys/: CMakeLists.txt  bgtest.cpp  buttontest.cpp  main.cpp  scrollbar.ui  scrollbardemo.cpp  scrollbartest.cpp  slabtest.cpp  tileset.cpp  tileset.h  uidemo.cpp  uidemo.ui
Oxygen/style/uiDemo/: demo.ui
Oxygen/style_and_windec/: CMakeLists.txt
Oxygen/style_and_windec/config/: config.pro
Oxygen/style_and_windec/windec/: CMakeLists.txt
asciiquarium/src/: AASaverConfig.kcfgc  CMakeLists.txt  Doxyfile  Messages.sh  aasaver.cpp  aasaver.h  asciiquarium.desktop  asciiquarium.kcfg  doxygen-stylesheet.css  frame.cpp  frame.h  screen.cpp  screen.h  settingswidget.ui  sprite.cpp  sprite.h
cokoon/: .emacs-dirvars  CMakeLists.txt  Makefile.am  README  TODO
cokoon/PyCokoonEditor/pycokoon/: cokoon.sip  configure.py
cokoon/PyCokoonEditor/src/: Makefile  PyCokoonEditor.e3t  PyCokoonEditor.kdevelop  PyCokoonEditor.kdevses  attributeeditwidget.py  documentview.py  edit_comment.ui  edit_expression.ui  edit_layout.ui  edit_object.ui  edit_source.ui  edit_theme.ui  edit_tile.ui  editorview.py  main.py  previewwidget.py  pycokooneditor.e4p  pycokooneditor.e4q  pycokooneditor.e4s  pycokooneditor.e4t  sdi_rc.py  tests.py  thememodel.py  themespec.coverage  themespec.py  themespecselector.py  themespectest.py  ui_edit_comment.py  ui_edit_expression.py  ui_edit_layout.py  ui_edit_object.py  ui_edit_source.py  ui_edit_theme.py  ui_edit_tile.py
cokoon/cokoon/: CMakeLists.txt  cokoonspec_compiler.cpp  document.cpp  expression_p.h  specification.cpp  specification.h  tile.cpp  tile_p.h  tilesource.cpp
cokoon/cokoon/cmake_modules/: FindCokoon.cmake
cokoon/cokoon/tests/: CMakeLists.txt  CokoonTestSpec.xml  TestCaseTheme.xml  ThemeWidget2.xml  ThemeWidget3.xml  ThemeWidgetSpec.xml  cokoontest-resources.qrc  cokoontest.cpp  cokoontest.h  testdeco1-src.xpm  themewidget.h
cokoon/cokoon/themeeditor/: CMakeLists.txt  CokoonThemeEditorui.rc  cokoonthemeeditorui.rc  commands.cpp  commands.h  documentspecificationdocument.cpp  documentspecificationdocument.h  edit_comment.ui  edit_expression.ui  edit_layout.ui  edit_object.ui  edit_source.ui  edit_theme.ui  edit_tile.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowcentralwidget.ui  previewdialog.cpp  previewdialog.h  previewdialog.ui  previewvariableeditor.cpp  previewvariableeditor.h  previewvariableeditor.ui  previewwidget.cpp  previewwidget.h  specificationstateselector.cpp  specificationstateselector.h  specificationstateselector.ui  specificationstateselectorstate.ui  themeattributeeditor.cpp  themeattributeeditor.h  themeitemview.cpp  themeitemview.h  themeitemview.ui  thememodel.cpp  thememodel.h
cokoon/decoration/: CMakeLists.txt  CokoonDecorationSpec.h  CokoonDecorationSpec.xml  CokoonDecorationTheme.desktop  Makefile.am  TestTheme.xml  cokoon.desktop  cokoondecoration.cpp  cokoondecoration.h
cokoon/decoration/TestTheme/: CMakeLists.txt  TestTheme.desktop  TestTheme.xml
cokoon/lib/: CMakeLists.txt  Makefile.am  bridges.cpp  bridges.h  cokoonspec_compiler.cpp  document.cpp  document.h  expression.cpp  object.cpp  object_p.h  specification.h  tilelayout.cpp  tilelayout_p.h  tilesource.cpp  tilesource_p.h
cokoon/lib/cmake_modules/: FindCokoon.cmake
cokoon/lib/tests/: CMakeLists.txt  CokoonTestSpec.h  CokoonTestSpec.xml  DecorationThemeSpec.h  DecorationThemeSpec.xml  Makefile.am  TestCaseTheme.xml  TestDecoration.xml  ThemeWidget1.xml  ThemeWidget2.xml  ThemeWidget3.xml  ThemeWidgetSpec.h  cokoontest-resources.qrc  cokoontest.cpp  cokoontest.h  testdeco1.xpm  themewidget.cpp  themewidget.h
cokoon/style/: CMakeLists.txt  CokoonStyleSpec.h  CokoonStyleSpec.xml  CokoonStyleTheme.desktop  cokoonstyle.cpp  cokoonstyle.h  cokoonstyle.themerc
cokoon/style/TestTheme/: CMakeLists.txt  TestTheme.desktop  TestTheme.xml
cokoon/tools/: gen-themespec-include.rb  strip-svg.rb
ion/: CMakeLists.txt  bitmap_helper.c  bitmaps.h  ion.themerc  ionstyle.cpp  ionstyle.h  pixmap.cpp
ion/config/: CMakeLists.txt  Messages.sh  ionstyleconfig.cpp  ionstyleconfig.h  styledialog.ui
kannasaver/: TEST  (+7 more)
kss-slideshow/: CMakeLists.txt  kslideshoweffect.cpp  kslideshoweffect.h  kslideshowsetup.cpp  kslideshowsetup.h  ksschessboardeffect.cpp  ksschessboardeffect.h  slideshow.cpp  slideshow.h  slideshowcfg.ui
kwin-decor-suse2/: CMakeLists.txt  ChangeLog  Doxyfile  README  TODO  configure.in.in  kwin-decor-suse2.spec  suse2.kdevelop
kwin-decor-suse2/debian/: changelog  control  rules
kwin-decor-suse2/po/: bg.po  bs.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  en_US.po  es.po  et.po  fi.po  fr.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  km.po  ko.po  kwin_SUSE2.pot  lo.po  lt.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  ta.po  tr.po  uk.po  (+2 more)
kwin-decor-suse2/src/: CMakeLists.txt  SUSE2  SUSE2.cpp  SUSE2.desktop  SUSE2.h  SUSE2.kcsrc  SUSE2button.cpp  SUSE2button.h  SUSE2client.cpp  SUSE2client.h  misc.cpp  shadow.cpp
kwin-decor-suse2/src/config/: CMakeLists.txt  Makefile.am  config.cpp  config.h  configdialog.ui
oxygen-transparent/style/config/: CMakeLists.txt  oxygentransparency.kcfg  oxygentransparencyconfig.cpp  oxygentransparencyconfig.h  oxygentransparencyconfigdata.kcfgc
plastik2/style/: Makefile.am  Plastik2.kcsrc  plastik.cpp  plastik.h  plastik.themerc  plastik2.themerc
(+394 files in other folders)
